# BYU-Mars-Rover

./: .gitignore  .gitmodules  README.md  install_packages.sh  startgps
onboard_ws/: catkin_noZED.sh  catkin_no_zed.sh  ropsy
onboard_ws/src/base/include/: rover_hub.h
onboard_ws/src/base/launch/: .camera_hub.launch.swo  .camera_hub.launch.swp  HD_science.launch  camera_hub.launch  camera_hub_withZed.launch  main_camera.launch  science_camera.launch  science_cameras.launch  single_cam.launch
onboard_ws/src/base/src/: camera_base.cpp  rover_hub.cpp  rover_hub_node.cpp
onboard_ws/src/dynamixel_control/: CMakeLists.txt
onboard_ws/src/dynamixel_control/src/: lib_dynamixel.py  lib_robotis.py
onboard_ws/src/gate_detector/: CMakeLists.txt  package.xml
onboard_ws/src/gate_detector/cfg/: Detector.cfg
onboard_ws/src/gate_detector/launch/: gate_detector_test.launch
onboard_ws/src/gate_detector/scripts/: .detector.py.swp  ballHSVgetter.py  detector.py  gate_detector.py  gate_detector_calib.py
onboard_ws/src/gate_hone/: CMakeLists.txt  package.xml
onboard_ws/src/gate_hone/launch/: gate_hone_base.launch  gate_hone_rover.launch
onboard_ws/src/gate_hone/scripts/: controllerPID.py  param.py  rosMain.py
onboard_ws/src/global_wp_pub/path/: costpath2.json
onboard_ws/src/global_wp_pub/src/: json_parser.py
onboard_ws/src/hal_control/: package.xml
onboard_ws/src/hal_control/launch/: drive.launch
onboard_ws/src/hal_control/src/: arm_control.py  drive_control.py
onboard_ws/src/hal_launch/: CMakeLists.txt  package.xml
onboard_ws/src/hal_launch/config/: my_ekf.yaml  my_navsat.yaml  my_razor.yaml
onboard_ws/src/hal_launch/launch/: IMUGPS.bag  PSOCandEstimator.launch  dan.bag  estimator.launch  my_ekf.launch  my_navsat.launch  navsat_tut.launch  robot_localization.launch
onboard_ws/src/hal_launch/src/: gps_frame_pub.py
onboard_ws/src/imu/: CMakeLists.txt  package.xml
onboard_ws/src/imu/launch/: king_louie_imu_single.launch
onboard_ws/src/imu/src/: imu0calibration.mat  imu_2_serial_magcal.py  imu_serial.py  razor_est.py  razor_wait.py
onboard_ws/src/ins/: package.xml
onboard_ws/src/ins/launch/: estimator.launch
onboard_ws/src/ins/src/: estimate.py  new_estimate.py
onboard_ws/src/mapping/: CMakeLists.txt  package.xml
onboard_ws/src/mapping/config/: plan.yaml
onboard_ws/src/mapping/launch/: planner.launch
onboard_ws/src/mapping/src/: AstarPlanner.cpp  AstarPlanner.h  map_class.cpp  planning_node.cpp  pseudo.txt
onboard_ws/src/nav_estimation/: CMakeLists.txt  package.xml
onboard_ws/src/nav_estimation/include/: nav_estimator.h
onboard_ws/src/nav_estimation/launch/: estimator.launch  eye_cam.launch  visual_odometry.launch
onboard_ws/src/nav_estimation/param/: eye_calibration.yaml  eyecalib.txt  eyecalib.yaml
onboard_ws/src/nav_estimation/src/: estimate.py  nav.py  nav_estimation_node.cpp  nav_estimator.cpp  razor_estimate.py
onboard_ws/src/navigation/: CMakeLists.txt  package.xml
onboard_ws/src/navigation/include/: .gitkeep
onboard_ws/src/navigation/src/: AstarPlanner.h  MapNode.h  RobotState.py  Supervisor.py  WP_Publisher.py  backup.py  downhill.py  gotogoal.py  tester.cpp  wheel_controller.py
onboard_ws/src/psoc/: CMakeLists.txt
onboard_ws/src/psoc/src/: 2017_psoc.py  2017_psoc_new.py  ArmConversion.py  nousb_psoc.py  psoc_new.py  science_psoc.py
onboard_ws/src/rover_msgs/: CMakeLists.txt  package.xml
onboard_ws/src/rover_msgs/msg/: Drive.msg  GateInfo.msg  RoverState.msg
rover_ws/src/: CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.2-pre1
rover_ws/src/arm_kinematics/: CMakeLists.txt  package.xml
rover_ws/src/arm_kinematics/include/: DO_NOT_DELETE.txt
rover_ws/src/arm_kinematics/launch/: IK.launch  TestIK.launch
rover_ws/src/arm_kinematics/src/: #ik_node.cpp#  IK_Test.cpp  ik_node.cpp  kdl_test.py  kinematics.py  publisher.py
rover_ws/src/base/: CMakeLists.txt  package.xml
rover_ws/src/base/include/: rover_hub.h  rover_hub.h.autosave
rover_ws/src/base/launch/: camera_hub.launch
rover_ws/src/base/scripts/: camera_base.py
rover_ws/src/base/src/: camera_base.cpp  rover_hub.cpp  rover_hub_node.cpp
rover_ws/src/gate_detection/: gate_detector.py
rover_ws/src/gate_detector/: CMakeLists.txt  package.xml
rover_ws/src/global_wp_pub/: CMakeLists.txt  package.xml
rover_ws/src/gs_node/: CMakeLists.txt  package.xml
rover_ws/src/gs_node/src/ground_station/: Signals.py  artificial_horizon.py  ground_station.py  map_info_parser.py  map_widget.py  marble_map.py  wp_window.py
rover_ws/src/gs_node/src/ground_station/data_plot/: mat_data_plot.py
rover_ws/src/gs_node/src/ground_station/resources/: ahnew.ui  map_info.xml  map_widget.ui  wp_window.ui
rover_ws/src/gs_node/src/ground_station/resources/wp_data/: Mars Desert Research Station_wp_data.txt
rover_ws/src/hal_control/: CMakeLists.txt  package.xml
rover_ws/src/hal_description/: CMakeLists.txt  package.xml
rover_ws/src/heartbeat/: CMakeLists.txt  README.md  package.xml
rover_ws/src/moveit/: .setup_assistant  package.xml
rover_ws/src/navigation/: CMakeLists.txt  Controller.py  package.xml
rover_ws/src/psoc/: package.xml
rover_ws/src/psoc/src/: psoc.py  (+3 more)
rover_ws/src/rover_description/: CMakeLists.txt  package.xml
rover_ws/src/rover_hub/: CMakeLists.txt  package.xml
rover_ws/src/rover_msgs/: CMakeLists.txt  package.xml
rover_ws/src/transforms/: CMakeLists.txt  package.xml
rover_ws/src/vision/: CMakeLists.txt  package.xml
rover_ws/src/vision/include/: vision.h
rover_ws/src/vision/src/: camera_base.cpp  vision.cpp  vision_node.cpp
scripts/: base_bashrc  base_rosrc  dev_info.sh  install_packages.sh  jetson_rosrc  readsciencedata.txt  repo_setup.sh  ros_master_jetson  ros_master_local  serial_science_read.py  startgps
scripts/rosbags/: estimator_plotter.py  straight_walk2_2017-04-22-21-34-26.bag  straight_walk_2017-04-22-21-32-49.bag
shared_ws/src/dynamixel_control/: package.xml
shared_ws/src/estimator/: CMakeLists.txt  package.xml
shared_ws/src/ins/: CMakeLists.txt
shared_ws/src/rover_msgs/: CMakeLists.txt  package.xml
(+113 files in other folders)
