<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>Package for mapping and planning for the BYU Mars Rover.</description>
  <maintainer email="pschleede@gmail.com">Peter Schleede</maintainer>
  <license>BSD</license>
  <author email="pschleede@gmail.com">Peter Schleede</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_loader</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>grid_map_visualization</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
