<?xml version="1.0"?>
<package>
  <name>arm_kinematics</name>
  <version>0.0.0</version>
  <description>The arm_kinematics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jonterry@todo.todo">jonterry</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>orocos_kdl</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>xacro</run_depend>


</package>
